--- a/cloud-consumer-feign-order80/pom.xml
+++ b/cloud-consumer-feign-order80/pom.xml
@@ -22,12 +22,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-        <!-- 引入自己定义的api通用包，可以使用Payment支付Entity -->
-        <!--<dependency>
+        <!-- 引入自己定义的api通用包，可以使用Payment支付Entity --><dependency>
             <groupId>org.example</groupId>
             <artifactId>cloud-api-commons</artifactId>
             <version>${project.version}</version>
-        </dependency>-->
+        </dependency>
         <!--web-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
