修改内容：springcloud-alibaba-sentinel

--- a/cloudalibaba-consumer-nacos-order83/pom.xml
+++ b/cloudalibaba-consumer-nacos-order83/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>cloudalibaba-consumer-nacos-order83</artifactId>
 
     <dependencies>
+        <!--SpringCloud openfeign -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
         <!--SpringCloud ailibaba nacos -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
